--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap");
  body {
 	/*  background: black; */
-     background: url(../asset/hallowen.jpg) no-repeat fixed center center  / cover;
+     background: url(../asset/cover.jpg) no-repeat fixed center center  / cover;
 	 overflow: hidden;
 }
  .containCube {
