--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,20 @@
 	 background: rgba(99, 26, 245, 0.9);
      box-shadow: inset 0 0 3rem #222;
 }
+
+.containCube .cube-1 img,
+.containCube .cube-2 img,
+.containCube .cube-3 img,
+.containCube .cube-4 img, 
+.containCube .cube-top img,
+.containCube .cube-bottom img{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	vertical-align: middle;
+}
+
  .containCube .cube-3 {
 	 background: rgba(196, 243, 179, 0.9);
      box-shadow: inset 0 0 3rem #222;
