--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,11 @@ header h1{
 	letter-spacing: .5rem;
 	animation: blur 2.5s linear infinite alternate;
     animation-delay: 0s;
-	text-shadow: -.1rem -.1rem 0 #222, .1rem -.1rem 0 #222, -.1rem .1rem 0 #222, .1rem .1rem 0 #222, .4rem .4rem 0 rgba(0, 0, 0, 0.2);
+	text-shadow: -.1rem -.1rem 0 #222, 
+	.1rem -.1rem 0 #222, 
+	-.1rem .1rem 0 #222, 
+	.1rem .1rem 0 #222, 
+	.4rem .4rem 0 rgba(0, 0, 0, 0.2);
 }
 
 @keyframes blur{
