--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ header h1{
 	 font-family: "Baloo Bhai", cursive;
 	 color: #ffffff;
 	 text-shadow: 0 0 .1rem #000000;
-	 border: .1rem solid #ffffff;
+	 border: .1rem solid #160101;
 }
 
  .containCube .cubeGroup h2 {
