--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ h1,h2,h3{
 }
 
 body {
-	/*  background: black; */
+	display: grid;
+	grid-template-rows: auto 1fr auto;
 	font: 1.6rem sans-serif;
     background: url(../asset/cover.jpg) no-repeat fixed center center  / cover;
 	overflow: hidden;
@@ -15,12 +16,11 @@ body {
 	line-height: 1.6;
 	-webkit-backdrop-filter: blur(.5rem);
 	backdrop-filter: blur(.5rem);
+	height: 100svh;
+	
 }
 header h1{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
+	position: relative;
 	font-family: 'halloween_tooregular';
 	text-align: center;
 	color: #a91010;
@@ -59,7 +59,7 @@ header h1 span{
 }
  .containCube {
 	 position: relative;
-	 height: 100vh;
+	 /* height: 100vh; */
 	 width: 100%;
 	 perspective: 85rem;
 }
@@ -157,8 +157,9 @@ header h1 span{
 	 background: rgba(217, 101, 181, 0.9);
      box-shadow: inset 0 0 3rem #222;
 }
-#footer{
+footer p{
 	color: #fff;
+	text-align: center;
 }
  @keyframes rotate {
 	 10% {
@@ -202,5 +203,13 @@ header h1 span{
 	 80% {
 		 transform: translatez(-10rem);
 	}
+}
+
+@media screen and (max-width: 100rem){
+	header h1{
+		font-size: 3.8rem;
+	}
+	
+	
 }
  
