--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ header h1 span{
      box-shadow: inset 0 0 3rem #222;
 }
 footer p{
-	color: #fff;
+	color: #fafafa;
 	text-align: center;
 }
  @keyframes rotate {
